Fixing layout bug in IE9 and below

--- a/scss/_conditionals.scss
+++ b/scss/_conditionals.scss
@@ -75,3 +75,23 @@
     }
   }
 }
+.no-cssgradients {
+  .tagline-section,
+  .hero,
+  .faq-questions,
+  .split-large,
+  .contact-form,
+  .contact-block,
+  .two-up,
+  .three-up,
+  .four-up,
+  .inner-point {
+    width: 100%;
+    max-width: 38em;
+    margin-left: auto;
+    margin-right: auto;  
+  }
+  .address h3 {
+    text-align: center;
+  }  
+}
